# wayclick

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
assets/: generate-icon.py
crates/wayclick-input/: Cargo.toml
crates/wayclick-input/examples/: click.rs  goto.rs  tapkey.rs
crates/wayclick-input/src/: cursor.rs  engine.rs  error.rs  hold.rs  keyboard.rs  lib.rs  mouse.rs  positioner.rs
spike/: Cargo.toml
spike/src/: main.rs
src/: App.tsx  GrantAccess.tsx  Overlay.tsx  keymap.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: global_shortcuts.rs  main.rs  portal_hotkey.rs
