[package]
name = "wayclick"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A sleek, minimal autoclicker for Linux/Wayland."
default-run = "wayclick"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wayclick-input = { path = "../crates/wayclick-input" }

[features]
# this feature is used for production builds where `devUrl` is not used
custom-protocol = ["tauri/custom-protocol"]
