[package]
name = "wayclick-input"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Input engine for Wayclick: virtual mouse over /dev/uinput plus compositor-specific absolute pointer positioning."

[dependencies]
input-linux.workspace = true
thiserror.workspace = true

[[example]]
name = "goto"
path = "examples/goto.rs"

[[example]]
name = "click"
path = "examples/click.rs"
